# new_orleans_surveillance_map

./: .gitignore  README.md  package.json  pyproject.toml  tailwind.config.js
containers/: Caddyfile  Containerfile  Containerfile.dev  podman-compose.yml
nola_cameras/cameras/: admin.py  api.py  api_urls.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
nola_cameras/cameras/migrations/: 0001_initial.py  0002_camera_image_2_camera_image_3.py  0003_make_cross_road_optional.py  0004_camera_camera_type.py
nola_cameras/cameras/tests/: test_api.py  test_forms.py  test_models.py  test_serializers.py  test_views.py  utils.py
nola_cameras/config/: urls.py  wsgi.py
nola_cameras/config/settings/: base.py  development.py  production.py
nola_cameras/static/css/: input.css
nola_cameras/templates/: base.html  map.html  report.html  report_mobile.html  report_success.html
requirements/: base.txt  development.txt  production.txt
scripts/: cloud-init.yml  import_loose_records.py  import_nopd_cameras.py  seed_data.py  setup.sh
